--- a/index.html
+++ b/index.html
@@ -514,69 +514,26 @@
             card.appendChild(indicator);
 
             try {
-                const response = await fetch('https://api.notion.com/v1/pages', {
+                // 우리의 서버리스 API 호출
+                const response = await fetch('/api/save-to-notion', {
                     method: 'POST',
                     headers: {
-                        'Authorization': `Bearer ${NOTION_TOKEN}`,
-                        'Content-Type': 'application/json',
-                        'Notion-Version': '2022-06-28'
+                        'Content-Type': 'application/json'
                     },
                     body: JSON.stringify({
-                        parent: {
-                            database_id: NOTION_DATABASE_ID
-                        },
-                        properties: {
-                            '책': {
-                                title: [
-                                    {
-                                        text: {
-                                            content: book.title
-                                        }
-                                    }
-                                ]
-                            },
-                            '창작자': {
-                                rich_text: [
-                                    {
-                                        text: {
-                                            content: book.author || ''
-                                        }
-                                    }
-                                ]
-                            },
-                            '구분': {
-                                select: {
-                                    name: '책'
-                                }
-                            },
-                            '시작일': {
-                                date: {
-                                    start: new Date().toISOString().split('T')[0]
-                                }
-                            },
-                            '현황': {
-                                status: {
-                                    name: '감상 중'
-                                }
-                            },
-                            '이미지': {
-                                files: [
-                                    {
-                                        type: 'external',
-                                        name: 'cover',
-                                        external: {
-                                            url: book.cover || ''
-                                        }
-                                    }
-                                ]
-                            }
+                        token: NOTION_TOKEN,
+                        databaseId: NOTION_DATABASE_ID,
+                        book: {
+                            title: book.title,
+                            author: book.author,
+                            cover: book.cover
                         }
                     })
                 });
 
                 if (!response.ok) {
                     const errorData = await response.json();
-                    throw new Error(errorData.message || '노션 저장 실패');
+                    throw new Error(errorData.error || '노션 저장 실패');
                 }
 
                 card.classList.remove('saving');
